--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 html {
   overflow: hidden;
@@ -14,4 +15,14 @@ body {
   height: 100dvh;
   width: 100dvw;
   background-color: black;
+}
+
+#volume-button {
+    position: absolute;
+    left: 95%;
+    margin-top: 1rem;
+}
+
+#volume-button:hover {
+    cursor: pointer;
 }
